<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyBrary</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mm_books">Books</string>
    <string name="mm_cds">CDs</string>
    <string name="title_activity_book_list_view">BookListView</string>
    <string name="add_book">Add Book</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="save">Save</string>
	<string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    
    <string-array name="test">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
    </string-array>

    <string name="title_activity_book_details">BookDetails</string>
    <string name="title_activity_edit_book">EditBook</string>

</resources>