<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
	        android:id="@+id/root"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	        
		    <TextView 
		        android:id="@+id/title"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/title" />
		    
		    <EditText 
		        android:id="@+id/titleedit"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" 
		        android:inputType="text" />
		    
		    <TextView 
		        android:id="@+id/author"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/author" />
		    
		    <EditText 
		        android:id="@+id/authoredit"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" 
		        android:inputType="text" />
		    
	</LinearLayout>
    
    <LinearLayout 
	        android:id="@+id/buttons"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" 
	        android:layout_below="@id/root">
		    
	        <Button 
	            android:id="@+id/save"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:text="@string/save" />
	        
	        <Button 
	            android:id="@+id/delete"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:text="@string/delete" />
	        
	        <Button 
	            android:id="@+id/cancel"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:text="@string/cancel" />
		   
	</LinearLayout>

</RelativeLayout>